# ffmpeg-wrap

./: .cproject  .gitignore  .jsbeautifyrc  .project  .uncrustify.cfg  decode_test.c  fake_gang_decoder.c  fakeaudiocapturemodule2.cc  fakeaudiocapturemodule2.h  ffmpeg_format.c  ffmpeg_format.h  ffmpeg_log.c  ffmpeg_log.h  ffmpeg_transcoding.c  ffmpeg_transcoding.h  gang_audio_device.cc  gang_audio_device.h  gang_dec.h  gang_decoder.c  gang_decoder.cc  gang_decoder.h  gang_decoder.hh  gang_decoder_impl.c  gang_decoder_impl.h  gang_init_deps.cc  gang_init_deps.h  gang_spdlog_console.cc  gang_spdlog_console.h  gangsources.cc  gangsources.h  gangvideocapturer.cc  gangvideocapturer.h  gangvideocapturerfactory.cc  gangvideocapturerfactory.h  main.c  meson.build  spdlog_console.cc  spdlog_console.h  uml.zargo
test/: README.md  gang_impl_rec_only_test_main.c  gang_impl_rec_only_test_main.cc  gang_rec_only_test_main.cc
